--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "dev",
   "main": "render.js",
   "scripts": {
-    "build": "browserify index.js > bundle.js",
+    "build": "browserify src/app/render.js > public/build/bundle.js",
     "watch": "watchify --debug src/app/render.jsx -o public/build/bundle.js"
   },
   "keywords": [
     "react"
   ],
-  "author": "chiris",
+  "author": "Chris Lion",
   "license": "ISC",
   "dependencies": {
+    "ajax-easy": "^1.0.1",
+    "gulp": "^3.8.11",
     "react": "^0.13.3",
+    "react-masonry-component": "^1.0.4",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "reflux": "^0.2.12",
@@ -21,7 +24,11 @@
   },
   "devDependencies": {
     "babelify": "^6.3.0",
-    "browserify": "^11.0.1"
+    "browserify": "^11.0.1",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.4.1",
+    "vinyl-source-stream": "^1.1.0"
   },
   "browserify": {
     "transform": [
