--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [
     "react"
   ],
-  "author": "Chris Lion",
+  "author": "Lion Chris",
   "license": "ISC",
   "dependencies": {
     "ajax-easy": "^1.0.1",
